# keel

./: .gitignore  LICENSE  README.md  SPRINT_2_5_SPEC.md  SUBSTRATE_V1.md  manim.cfg  pyproject.toml
.claude/dialectic/: state.json
data/: prompts.json
data/payloads/: p1_p2_combined.txt  p1_p2_p3_combined.txt  p1_questionnaire.txt  p2_claude_memory.txt  p3_spotify.txt  p_soul.txt  p_soul_full.txt
docs/: sprint1-findings.md
results/coherence/: generations.jsonl  matched_data.json  prompt_ref_cka.json  ratings.csv
scripts/: analyze_coherence.py  analyze_preflight.py  analyze_traces.py  cka_diagnostic.py  cone_violation.py  deep_analysis.py  evr_elbow.py  generate_full_soul.py  generate_payloads.py  human_eval.py  layer_sweep.py  parse_dialectic_trace.py  pilot_run.py  preflight_base_rate.py  preflight_sanity.py  prepare_traces.py  profile_memory.py  recompute_cka.py  run_coherence_experiment.py  run_sprint_2_5.sh  run_trace_experiment.py  sanity_check.py  scaling_ladder.py  spotify_auth.py  verify_pipeline.py  visualize_sprint_2_5.py
substrate/: capture.py  config.py  hooks.py  modal_app.py  payloads.py  rotation.py  spotify_context.py
tests/: test_capture.py  test_hooks.py  test_payloads.py  test_rotation.py  test_spotify_context.py
traces/: README.md
traces/agentic_commerce/: coherent.jsonl  d2_substitution.md  d2_target.json  d3_substitution.md  stats.json
traces/harness_thesis/: coherent.jsonl  coherent_5iter.jsonl  d2_substitution.md  d2_target.json  d3_substitution.md  stats.json
traces/kinnected/: coherent.jsonl  coherent_5iter.jsonl  stats.json  (+3 more)
(+34 files in other folders)
