[project]
name = "keel"
version = "0.0.1"
description = "Substrate geometry: activation-based coherence measurement"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.46",
    "accelerate>=1.0",
    "safetensors",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "numpy>=1.26",
    "h5py>=3.11",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tqdm",
    "modal",
    "spotipy>=2.26.0",
]

[dependency-groups]
dev = [
    "anthropic>=0.86.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.0",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"
